Research OAuth2 and SAML provider setup (#156)
* Add ultrathink analysis for agent/model selection strategy

Research on optimal agent routing for different task types in BAZINGA:
- Identified mismatch: Haiku developers spawned for research tasks
- Researched LLM routing best practices (DAAO paper, Anthropic guidance)
- Got GPT-5 external review which corrected initial approach
- Recommendation: Extend Requirements Engineer for research tasks
- Add explicit task_type metadata to PM planning
- Use Sonnet for research, Haiku for simple implementation only

Key insight: Task TYPE matters as much as task COMPLEXITY for model selection.

* Add surgical implementation plan for task-type routing

Ultrathink analysis with GPT-5 review for routing research tasks
to Requirements Engineer instead of Haiku developers.

Key decisions after GPT-5 review:
- NO new PM status code (use existing PLANNING_COMPLETE)
- Add type + initial_tier fields to task groups
- Extend existing tier-based spawning for RE
- Use execution_phases for research→implementation ordering
- Explicit [R] marker preferred over keyword heuristics
- Remove "investigation" keyword (conflicts with Investigator)

Risk mitigation:
- Minimal orchestrator changes (~4 lines)
- Minimal PM changes (~25 lines)
- Leverages existing tier-based spawning
- All existing workflows preserved

* Add comprehensive task type classification with LLM review integration

Research document analyzing all software development task types and mapping
them to optimal BAZINGA agents. Includes:

- Complete task taxonomy (research, implementation, security, architecture,
  infrastructure, investigation, debugging, testing, documentation)
- Agent capability matrix showing which agents are best for each task type
- Database schema impact analysis with migration strategy
- Workflow impact analysis for each task type
- External LLM review (GPT-5) with critical issue identification

Key findings from GPT-5 review:
- Original plan was over-scoped (6

--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -35,6 +35,20 @@ jobs:
           # Exclude package-lock.json (large, auto-generated) from review diff
           git diff origin/${{ github.base_ref }}...HEAD -- . ':!**/package-lock.json' > diff.patch
 
+      - name: Check API key
+        id: api_key_check
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: |
+          if [ -z "$GEMINI_API_KEY" ]; then
+            echo "has_key=false" >> $GITHUB_OUTPUT
+            echo "## Gemini Code Review" > review.txt
+            echo "" >> review.txt
+            echo "Gemini review skipped: no API key available for this PR context." >> review.txt
+          else
+            echo "has_key=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Fetch previous Gemini reviews from PR
         id: previous_gemini
         env:
@@ -112,10 +126,9 @@ jobs:
           HAS_RESPONSES: ${{ steps.review_responses.outputs.has_responses }}
         run: |
           # Configuration
-          # Max diff size in characters - Gemini API has token limits
-          # 80k chars ≈ 20k tokens, Gemini 3 Pro has 1M context window
-          # Increased limits to avoid losing context
-          MAX_DIFF_SIZE=80000
+          # Max diff size in LINES - truncate by lines for clean breaks (not bytes which can corrupt)
+          # 3000 lines is generous for most PRs, Gemini 3 Pro has 1M context window
+          MAX_DIFF_LINES=3000
           MAX_PREVIOUS_GEMINI_SIZE=16000
           MAX_RESPONSES_SIZE=12000
 
@@ -239,6 +252,15 @@ jobs:
           |----------------|--------|
           | Issue X | ✅ Fixed in this commit |
           | Issue Y | ⏭️ Acknowledged as deferred |
+
+          ### Already Addressed Items (from prior responses)
+
+          Items below were addressed in prior responses. Listed here for completeness, NOT in main review:
+
+          | Item | Response | Your Assessment |
+          |------|----------|-----------------|
+          | [file:line] Issue A | ⏭️ Skipped - by design | Acknowledged - valid reason |
+          | [file:line] Issue B | ✅ Fixed | Verified in diff |
           ```
 
           **CRITICAL RULES:**
@@ -247,19 +269,20 @@ jobs:
           - Be CONCISE: max 2 sentences per issue
           - If no issues in a category, write "None found"
           - Start with "## Gemini Code Review" header
+          - Items from prior responses go in "Already Addressed Items" table at END, NOT in Critical/Suggestions
 
           ## Git Diff
 
           ```diff
           EOF
 
-          # Truncate diff if too large (with safe command substitution)
-          DIFF_SIZE="$(wc -c < diff.patch 2>/dev/null || echo 0)"
-          if [ "$DIFF_SIZE" -gt "$MAX_DIFF_SIZE" ]; then
+          # Truncate diff by LINES for clean breaks (not bytes which can corrupt diff blocks)
+          DIFF_LINES="$(wc -l < diff.patch 2>/dev/null || echo 0)"
+          if [ "$DIFF_LINES" -gt "$MAX_DIFF_LINES" ]; then
             echo "" >> prompt_header.txt
-            echo "⚠️ Note: The diff has been truncated to ${MAX_DIFF_SIZE} characters due to size limits." >> prompt_header.txt
+            echo "⚠️ Note: The diff has been truncated to ${MAX_DIFF_LINES} lines due to size limits." >> prompt_header.txt
             echo "" >> prompt_header.txt
-            head -c "$MAX_DIFF_SIZE" diff.patch >> prompt_header.txt
+            head -n "$MAX_DIFF_LINES" diff.patch >> prompt_header.txt
           else
             cat diff.patch >> prompt_header.txt
           fi
@@ -343,6 +366,7 @@ jobs:
           done
 
       - name: Call Gemini API
+        if: steps.api_key_check.outputs.has_key == 'true'
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
@@ -367,12 +391,12 @@ jobs:
 
           # Save response to file with extended timeout for Gemini 3 Pro
           # --connect-timeout 30: Allow 30s to establish connection
-          # --max-time 240: Allow 4 minutes for complete response (Gemini 3 Pro can be slow)
+          # --max-time 360: Allow 6 minutes for complete response (Gemini 3 Pro can be slow)
           # Note: Capture exit code explicitly to prevent bash -e from exiting on curl failure
           set +e
           HTTP_CODE=$(curl -s \
             --connect-timeout 30 \
-            --max-time 240 \
+            --max-time 360 \
             -w "%{http_code}" \
             -o gemini_response.json \
             -X POST \
@@ -418,22 +442,58 @@ jobs:
             echo "Error: Gemini API returned status $HTTP_CODE"
             cat gemini_response.json
 
-            # Build error message based on HTTP status
-            if [ "$HTTP_CODE" == "429" ]; then
+            # On 503 (model overloaded), retry with faster fallback model
+            if [ "$HTTP_CODE" == "503" ]; then
+              echo "Model overloaded. Retrying with gemini-2.5-flash..."
+              sleep 5  # Brief pause before retry
+
+              set +e
+              HTTP_CODE=$(curl -s \
+                --connect-timeout 30 \
+                --max-time 180 \
+                -w "%{http_code}" \
+                -o gemini_response.json \
+                -X POST \
+                -H "Content-Type: application/json" \
+                -H "x-goog-api-key: $GEMINI_API_KEY" \
+                -d @gemini_payload.json \
+                https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent)
+              CURL_EXIT=$?
+              set -e
+
+              echo "Fallback HTTP Status: $HTTP_CODE"
+
+              if [ "$HTTP_CODE" == "200" ]; then
+                echo "Fallback to gemini-2.5-flash succeeded!"
+                # Fall through to response parsing below
+              else
+                echo "## ⚠️ Gemini API Error (HTTP $HTTP_CODE)" > review.txt
+                echo "" >> review.txt
+                echo "_Reviewed commit: ${REVIEW_SHA_SHORT}_" >> review.txt
+                echo "" >> review.txt
+                echo "Primary model (gemini-3-pro-preview) overloaded (503). Fallback model (gemini-2.5-flash) also failed." >> review.txt
+                echo "" >> review.txt
+                echo "**Suggestions:**" >> review.txt
+                echo "- Wait a few minutes and retry the workflow" >> review.txt
+                echo "- Check Google AI status page" >> review.txt
+                exit 0
+              fi
+            elif [ "$HTTP_CODE" == "429" ]; then
               echo "## ⚠️ Gemini API Error (HTTP $HTTP_CODE)" > review.txt
               echo "" >> review.txt
               echo "Rate limit exceeded. Please check your API quota at https://aistudio.google.com/app/apikey" >> review.txt
+              exit 0
             elif [ "$HTTP_CODE" == "401" ] || [ "$HTTP_CODE" == "403" ]; then
               echo "## ⚠️ Gemini API Error (HTTP $HTTP_CODE)" > review.txt
               echo "" >> review.txt
               echo "Authentication failed. Please verify GEMINI_API_KEY secret is configured correctly." >> review.txt
+              exit 0
             else
               echo "## ⚠️ Gemini API Error (HTTP $HTTP_CODE)" > review.txt
               echo "" >> review.txt
               echo "API call failed. Check workflow logs for details." >> review.txt
+              exit 0
             fi
-
-            exit 0
           fi
 
           # Parse response with error handling
