Move workflow configs from bazinga/config to root workflow/ folder
Following the templates/ pattern for consistency:
- Source: workflow/ (root level, tracked in git)
- Symlink: bazinga/config -> ../workflow (for dev mode compatibility)
- Packaged: workflow/ -> bazinga_cli/bazinga/config/ in wheel

Changes:
- Create workflow/ folder at root with transitions.json and agent-markers.json
- Create bazinga/config symlink pointing to ../workflow
- Update pyproject.toml force-include to use workflow/ as source
- Update .gitignore to explain new structure
- Update CLI installer comment to document path resolution
- Update skill docs (config-seeder, bazinga-db schema) with new paths
- Update investigation_loop.md template references

This ensures deployable config files follow the same pattern as templates/,
with source at root level and symlink for dev mode path compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,8 @@ bazinga/bazinga.db*
 !bazinga/testing_config.json
 !bazinga/scripts/
 !bazinga/scripts/**
-!bazinga/config/
-!bazinga/config/**
+
+# workflow/ folder is at root level (not inside bazinga/) - tracked by default
+# bazinga/config is a symlink -> ../workflow for dev mode compatibility
 
 test-results/
